--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,42 @@
 
 .button{
-    background-color:aqua;
+    background-color:blue;
+    color: white;
+    border-radius: 20px;
+    width: 95px;
+    height: 50px;
 }
+
+body {
+    margin: 0px
+}
+.container {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center
+}
+.box {
+    width: 300px;
+    height: 300px;
+    background: #fff;
+    border-radius: 10px;
+    border: 1px solid blue;
+}
+
+#class, #name{
+    width: 300px;
+    border-radius: 2px;
+}
+
+h1{
+    color: blue;
+    text-align: center;
+}
+
+h6{
+    text-align: center;
+}
+
