--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 
 .button{
+    margin-left: 10%;
     background-color:blue;
     color: white;
     border-radius: 20px;
@@ -19,16 +20,21 @@ body {
     align-items: center
 }
 .box {
-    width: 300px;
-    height: 300px;
+    width: 500px;
+    height: 380px;
     background: #fff;
     border-radius: 10px;
-    border: 1px solid blue;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, .3);
 }
 
-#class, #name{
-    width: 300px;
-    border-radius: 2px;
+#name, #class{
+    width: 100%;
+    height: 40px;
+    background: white;
+    border-radius: 4px;
+    border: 1px solid silver;
+    margin: 10px 0 18px 0;
+    padding: 0 10px;
 }
 
 h1{
