--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,9 @@
 }
 
 body {
-    margin: 0px
+    background-image: url("/img/diablo2.jpg");
+    background-color: black;
+    background-repeat: no-repeat, repeat;
 }
 .container {
     width: 100vw;
