--- a/css/style.css
+++ b/css/style.css
@@ -44,3 +44,25 @@
     height: 320px;
     margin-bottom: 80px;
 }
+
+.healt-bar{
+    display: flex;
+}
+
+.health-bar-outer {
+    background: #171217;
+    height: 1vh; 
+    width:90%;
+    margin: 0 5%;
+    border-radius: 2px;
+}
+
+.health-bar-outer .health-bar-inner {
+    background: #466d34;
+    height: 100%;
+    border-radius: 2px;
+}
+
+.health-bar-outer .health-bar-inner.danger {
+    background:#d1435f;
+}
