--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,9 @@
 
 .card3, .card4 {
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-rows: auto auto;
+    justify-content: center;
+    align-items: center;
     width: 410px;
     height: 200px;
     background-color: black;
@@ -55,20 +57,43 @@
     height: 25px;
 }
 
+.mana {
+    width: 25px;
+    height: 25px;
+}
+
 .health-bar-outer {
     background: #171217;
     height: 1vh; 
-    width:90%;
+    width:300px;
     margin: 0 5%;
     border-radius: 2px;
 }
 
 .health-bar-outer .health-bar-inner {
-    background: #466d34;
+    background: red;
     height: 100%;
     border-radius: 2px;
 }
 
 .health-bar-outer .health-bar-inner.danger {
+    background:#d1435f;
+}
+
+.mana-bar-outer {
+    background: #171217;
+    height: 1vh; 
+    width:300px;
+    margin: 0 5%;
+    border-radius: 2px;
+}
+
+.mana-bar-outer .mana-bar-inner {
+    background: blue;
+    height: 100%;
+    border-radius: 2px;
+}
+
+.mana-bar-outer .mana-bar-inner.danger {
     background:#d1435f;
 }
