--- a/css/style.css
+++ b/css/style.css
@@ -43,16 +43,20 @@
 }
 
 .card3, .card4 {
-    display: grid;
-    grid-template-rows: auto auto;
-    justify-content: center;
-    align-items: center;
     width: 410px;
     height: 200px;
     background-color: black;
 }
 
-.health-img .heart {
+#monster-status, #hero-status {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    justify-content: space-evenly;
+    align-items: center;
+
+}
+
+.heart {
     width: 25px;
     height: 25px;
 }
@@ -66,7 +70,6 @@
     background: #171217;
     height: 1vh; 
     width:300px;
-    margin: 0 5%;
     border-radius: 2px;
 }
 
@@ -84,7 +87,6 @@
     background: #171217;
     height: 1vh; 
     width:300px;
-    margin: 0 5%;
     border-radius: 2px;
 }
 
@@ -96,4 +98,8 @@
 
 .mana-bar-outer .mana-bar-inner.danger {
     background:#d1435f;
+}
+
+.number-life-mana {
+    color: white;
 }
